--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="image-wrapper">
-                        <a href="https://hop.clickbank.net/?affiliate=1bhoot&vendor=sugardef&pid=pre1&tid=jggl"><img src="assets/images/hero-img-1000x769.png" alt="Mobirise Website Builder"></a>
+                        <a href="https://hop.clickbank.net/?affiliate=zdeep4&vendor=alpilean&tid=jyt"><img src="assets/images/hero-img-1000x769.png" alt="Mobirise Website Builder"></a>
 
                     </div>
                 </div>
@@ -89,7 +89,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4">
                     <div class="image-wrapper">
-                        <a href="https://hop.clickbank.net/?affiliate=1bhoot&vendor=sugardef&pid=pre1&tid=jggl"><img src="assets/images/certifications-new-1256x212.png" alt="Mobirise Website Builder"></a>
+                        <a href="https://hop.clickbank.net/?affiliate=zdeep4&vendor=alpilean&tid=jyt"><img src="assets/images/certifications-new-1256x212.png" alt="Mobirise Website Builder"></a>
 
                     </div>
                 </div>
@@ -120,7 +120,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-12">
                     <div class="image-wrapper">
-                        <a href="https://hop.clickbank.net/?affiliate=1bhoot&vendor=sugardef&pid=pre1&tid=jggl"><img src="assets/images/screenshot-2024-03-12-131609-1419x700.png" alt="Mobirise Website Builder"></a>
+                        <a href="https://hop.clickbank.net/?affiliate=zdeep4&vendor=alpilean&tid=jyt"><img src="assets/images/screenshot-2024-03-12-131609-1419x700.png" alt="Mobirise Website Builder"></a>
 
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                         <div class="card-box align-center">
 
 
-                            <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-2" href="https://hop.clickbank.net/?affiliate=1bhoot&vendor=sugardef&pid=pre1&tid=jggl">Order Now</a></div>
+                            <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-2" href="https://hop.clickbank.net/?affiliate=zdeep4&vendor=alpilean&tid=jyt">Order Now</a></div>
                         </div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-4">
                     <div class="image-wrapper">
-                        <a href="https://hop.clickbank.net/?affiliate=1bhoot&vendor=sugardef&pid=pre1&tid=jggl"><img src="assets/images/free-shipping-654x654.png" alt="Mobirise Website Builder"></a>
+                        <a href="https://hop.clickbank.net/?affiliate=zdeep4&vendor=alpilean&tid=jyt"><img src="assets/images/free-shipping-654x654.png" alt="Mobirise Website Builder"></a>
 
                     </div>
                 </div>
@@ -252,7 +252,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-11">
                     <div class="image-wrapper">
-                        <a href="https://hop.clickbank.net/?affiliate=1bhoot&vendor=sugardef&pid=pre1&tid=jggl"><img src="assets/images/screenshot-2024-03-12-131609-1419x700.png" alt="Mobirise Website Builder"></a>
+                        <a href="https://hop.clickbank.net/?affiliate=zdeep4&vendor=alpilean&tid=jyt"><img src="assets/images/screenshot-2024-03-12-131609-1419x700.png" alt="Mobirise Website Builder"></a>
                         <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Our customers say 4.98/5&nbsp; ⭐⭐⭐⭐⭐ based on 2000+ reviews</p>
                     </div>
                 </div>
